traefik-2/prod-frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-prod
  namespace: prod
spec:
  ports:
    - protocol: TCP
      name: frontendsvc
      port: 80
  selector:
    app: frontend-prod
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: prod
  labels:
    app: frontend-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-prod
  template:
    metadata:
      labels:
        app: frontend-prod
    spec:
      containers:
        - name: frontend
          image: nginx
          ports:
            - name: frontendsvc
              containerPort: 80
