traefik-2/traefik.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      nodePort: 30080
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 30808
    - protocol: TCP
      name: https
      port: 443
      nodePort: 30443
  type: NodePort
  selector:
    app: traefik
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.4
          args:
            - --api.insecure
            - --accesslog
            - --entrypoints.https.Address=:443
            - --entrypoints.http.Address=:80
            - --providers.kubernetesIngress.ingressClass=traefik
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
